--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "14.2.8",
     "openai": "^4.58.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "eslint": "^8",
