--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
     "dotenv": "^16.4.5",
+    "mongoose": "^8.6.2",
     "next": "14.2.8",
     "openai": "^4.58.1",
     "react": "^18",
