--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.0.2",
-    "@mui/material": "^6.0.2",
+    "@mui/icons-material": "^6.1.0",
+    "@mui/material": "^6.1.0",
     "dotenv": "^16.4.5",
     "mongoose": "^8.6.2",
-    "next": "14.2.8",
+    "next": "^14.2.11",
     "openai": "^4.58.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0"
   },
